2012-08-08  Andras Becsi  <andras.becsi@nokia.com>

        [Qt][WK2] Set the fixed layout setting before creating the page
        https://bugs.webkit.org/show_bug.cgi?id=93374

        Reviewed by Noam Rosenthal.

        Any page setting should preferrable be set before creating the page
        but fixed layout was set after the initialization of the web page.

        * UIProcess/API/qt/qquickwebview.cpp:
        (QQuickWebViewPrivate::initialize):
        (QQuickWebViewFlickablePrivate::initialize):

2012-08-08  Mario Sanchez Prada  <msanchez@igalia.com>

        [WK2] Add new C API to generate MHTML data from the UI process
        https://bugs.webkit.org/show_bug.cgi?id=89872

        Reviewed by Anders Carlsson.

        Add new C API in the UI Process, using ENABLE(MHTML) guards as needed.

        * UIProcess/API/C/WKPage.cpp:
        (WKPageGetContentsAsMHTMLData):
        * UIProcess/API/C/WKPage.h:

        Implementation in the UI Process's WebPage proxy object.

        * UIProcess/WebPageProxy.cpp:
        (WebKit):
        (WebKit::WebPageProxy::getContentsAsMHTMLData):
        * UIProcess/WebPageProxy.h:
        (WebPageProxy):

        Implementation in the WebProcess, relying in WebCore::MHTMLArchive.

        * WebProcess/WebPage/WebPage.cpp:
        (WebKit):
        (WebKit::WebPage::getContentsAsMHTMLData):
        * WebProcess/WebPage/WebPage.h:
        (WebPage):
        * WebProcess/WebPage/WebPage.messages.in:

2012-08-07  YoungTaeck Song  <youngtaeck.song@samsung.com>

        [WK2][EFL] Implement accelerated compositing on WK2 Efl port
        https://bugs.webkit.org/show_bug.cgi?id=89840

        Reviewed by Noam Rosenthal.

        Implement accelerated composition with TiledBackingStore on WK2 Efl port.
        This implementation is based on COORDINATED_GRAPHICS.

        * CMakeLists.txt:
        * PlatformEfl.cmake:
        * Shared/ShareableSurface.cpp:
        * Shared/WebCoreArgumentCoders.cpp: