@@ -194,10 +194,12 @@ void PluginProcessProxy::didFinishLaunching(ProcessLauncher*, CoreIPC::Connectio
         pluginProcessCrashedOrFailedToLaunch();
         return;
     }
-    
+
     m_connection = CoreIPC::Connection::createServerConnection(connectionIdentifier, this, RunLoop::main());
 #if PLATFORM(MAC)
     m_connection->setShouldCloseConnectionOnMachExceptions();
+#elif PLATFORM(QT)
+    m_connection->setShouldCloseConnectionOnProcessTermination(m_processLauncher->processIdentifier());
 #endif
 
     m_connection->open();
